vbnc/vbnc/vbnc/tests/Errors/30060-18.vb
Class T
    Const M_String As String = 2UL
End Class